[tool.poetry]
name = "v1-service-commit-cron"
version = "0.1.0"
description = ""
authors = ["hwc9169 <hwc9169@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
